@@ -16,12 +16,13 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Saving an image now commits paste if auto commit mode is enabled
 	* Undo system now uses a bit less memory
 	* Support for compiling with giflib 5 added
+	* BUGFIX - Compilation without JPEG and TIFF support now works again
 	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
 	* BUGFIX - Gradient button no longer fails to show current gradient mode after showing settings toolbar
 	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
 	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
 	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
-	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale
+	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale (except if written as grayscale - ImageMagick does that)
 	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
 	* BUGFIX - Background layer is now made large enough to accommodate all frames when loading animation into layers
 	* BUGFIX - Animation cycles are now properly updated when layers are reordered, duplicated or deleted
